Added userActivityLog.jsp page

--- a/src/main/webapp/pages/loginSystem/css/signin.css
+++ b/src/main/webapp/pages/loginSystem/css/signin.css
@@ -4,11 +4,10 @@ body{
     background-color: #eee;
 }
 
-.form-signin{
+.form-signin,.alert{
     max-width:330px;
     padding:15px;
     margin:0 auto;
-
 }
 
 .form-signin .form-signin-heading,
